# AVHRR-retrieval

./: .gitignore  README.md  missing_merra2_days_19800101_20250831.txt  pyproject.toml  retrieve_compress_export2Rain.sbatch  run_retrieval_parallel.sbatch  slurm-5053805.out  slurm-5053812.out  slurm-5053978.out
AVHRR_collocation_pipeline/: run_retrieval_parallel.py  utils.py
AVHRR_collocation_pipeline/evaluation/: collocate_retrieved_L2_with_ref_preci.py  compare_with_previous_2010_retrieved.py  evaluate_retrieval_vs_refs.py  evaluate_retrieval_vs_refs_categorical.py  make_seasonal_means_per_season_groups.py  per_orbit_KGE_analysis.py  plot_mean_seasonal_polar.py  plot_seasonal_mean_WGS.py  selecting_orbits_for_Dave.py
AVHRR_collocation_pipeline/evaluation/config/: collocate_eval.config
AVHRR_collocation_pipeline/readers/: AVHRR_reader.py  AutoSnow_reader.py  AutoSnow_reference.py  ERA5_reader.py  ERA5_reference.py  IMERG_reader.py  IMERG_reference.py  MERRA2_reader.py  MERRA2_reference.py
AVHRR_collocation_pipeline/retrievers/: back_to_L2.py  collocate_and_reproj.py  retrieve_and_reproj.py
AVHRR_collocation_pipeline/retrievers/reproject/: polar_to_wgs.py
config/: retrieve_config.toml
tests/: inspect_raw_orbit.py  test_AVHRRProcessor.py  test_AVHRR_collocation_pipeline.py  test_back_to_l2_single_orbit.py  test_end2end_retrieve_one_orbit.py  test_retrieval_process.py  test_run_retrieval_parallel.py  test_tb12_closure_with_processor.py
